5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1850_2603.log
== SUBMITION (2019-06-30 21:46:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array(eval(input("dig a matriz: ")))
c = matriz.shape [1]
l = matriz.shape [0]
for i in range (1):
	print(max(matriz[i,:]))
-- EXECUTION TIME:
1.02577
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
1
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 23:28:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array(eval(input("dig a matriz: ")))
c = matriz.shape [1]
z=zeros((4,4), dtype=int)

for i in range (1):
	for j in range (c)
		matriz[i,j]= sorted(matriz[:,j], reverse = True )
print(matriz)
-- EXECUTION TIME:
0.630335
-- ERROR:
  File "/home/codebench/codes/1850/2603/main.py", line 8
    for j in range (c)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 23:28:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array(eval(input("dig a matriz: ")))
c = matriz.shape [1]
z=zeros((4,4), dtype=int)
for i in range (c):
	for j in range (c)
		matriz[i,j]= sorted(matriz[:,j], reverse = True )
print(matriz)
-- EXECUTION TIME:
0.80997
-- ERROR:
  File "/home/codebench/codes/1850/2603/main.py", line 7
    for j in range (c)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 23:28:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array(eval(input("dig a matriz: ")))
c = matriz.shape [1]
z=zeros((4,4), dtype=int)
for i in range (c):
	for j in range (c):
		matriz[i,j]= sorted(matriz[:,j], reverse = True )
print(matriz)
-- EXECUTION TIME:
1.02167
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/2603/main.py", line 8, in <module>
    matriz[i,j]= sorted(matriz[:,j], reverse = True )
ValueError: setting an array element with a sequence.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 23:29:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz = array(eval(input("dig a matriz: ")))
c = matriz.shape [1]
z=zeros((4,4), dtype=int)
for i in range (c):
	for j in range (c):
		matriz[:,j]= sorted(matriz[:,j], reverse = True )
print(matriz)
-- EXECUTION TIME:
1.14308
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
